compile-direct/tests/failing/1-missing_args/main.af
str: @str

foo: (a: str, b: str, ok: (str)){
    @write(a, @exit(0))
}
main: () {
    foo
}
